# DocRetriever

./: .gitignore  README.md  main.py  model_downloaders.py  pyproject.toml
app/: chunker.py  cli.py  indexing.py  loader.py  pickle_util.py  preprocess.py  profiling_utils.py  search.py  vectorizer.py  word_embeddings.py
app/chunking/: chunker.py  langchain_chunks.py  text_chunker.py
app/embeddings/: gensim_embeds.py  transformer_embeds.py  word_embedings.py
app/file_loaders/: docx_loader.py  loader.py  pdf_loader.py  text_loader.py
app/models/: chunk.py  document.py
app/searching/: artifacts.py  retrieve_docs.py  search.py
app/text_preprocess/: preprocess.py  preprocess_funcs.py
tests/unit/: test_loaders.py  test_preprocess.py
